[tool.poetry]
name = "app-gsp-traffic-dataset"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygsp = "^0.5.1"
streamlit = "^1.34.0"
networkx = {extras = ["default"], version = "^3.3"}


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
